Fix third-party-auth dashboard layout issue.

--- a/lms/static/sass/multicourse/_dashboard.scss
+++ b/lms/static/sass/multicourse/_dashboard.scss
@@ -137,6 +137,7 @@
 
               .control {
                 float: right;
+                white-space: initial;
               }
 
               .icon {
